# greentic-setup

./: .gitignore  CLAUDE.md  Cargo.toml  DEMO_CHECKLIST.md  DEMO_SETUP_FEATURES.md  LICENSE  README.md  coverage-policy.json  rust-toolchain.toml
.codex/: PR-SE-01-static.md  repo_overview.md
.github/workflows/: auto-tag.yml  ci.yml  crates-publish.yml  dev-publish.yml  nightly-coverage.yml  perf.yml  publish.yml  release-binaries.yml  rust-ci.yml
assets/: default-welcome.gtpack
assets/setup-ui/: LICENSE-Poppins.txt  app.js  index.html  style.css
assets/setup-ui-v2/: index.html
assets/setup-ui-v2/js/: app.js  formatters.js  router.js
assets/setup-ui-v2/js/stores/: locale.js  overview.js  scope.js  wizard.js
assets/setup-ui-v2/styles/: animations.css  layout.css  tokens.css
assets/setup-ui/js/: api.js
assets/setup-ui/js/stores/: bundle.js  capabilities.js  providers.js  scopeForm.js  secrets.js  ui.js  wizard.js
assets/setup-ui/styles/: base.css  components.css  layout.css
benches/: perf.rs
ci/: local_check.sh
docs/: README.md  adaptive-cards.md  admin-api.md  coding-agents.md  demo-guide.md  extension-pack-ingress-http.md  manual-testing.md  mtls-setup.md
docs/superpowers/plans/: 2026-04-11-greentic-setup-dashboard-phase-1a.md
docs/superpowers/specs/: 2026-04-11-greentic-setup-dashboard-phase-1a-design.md
examples/: seed_encrypted_store.rs
i18n/: ar-AE.json  ar-DZ.json  ar-EG.json  ar-IQ.json  ar-MA.json  ar-SA.json  ar-SD.json  ar-SY.json  ar-TN.json  ar.json  ay.json  bg.json  bn.json  cs.json  da.json  de.json  el.json  en-GB.json  en.json  es.json  et.json  fa.json  fi.json  fr.json  gn.json  gu.json  hi.json  hr.json  ht.json  hu.json  id.json  it.json  ja.json  km.json  kn.json  ko.json  lo.json  lt.json  lv.json  ml.json  (+26 more)
plans/: gtc-setup-bundle.md  setup-update-remove.md
scripts/: check_i18n_coverage.sh  demo.sh
src/: answers_crypto.rs  bundle.rs  bundle_source.rs  capabilities.rs  card_setup.rs  cli_args.rs  cli_commands.rs  cli_helpers.rs  cli_i18n.rs  config_envelope.rs  deploy_inputs.rs  deployment_targets.rs  discovery.rs  doctor.rs  engine.rs  flow.rs  gtbundle.rs  lib.rs  operator_yaml.rs  plan.rs  platform_setup.rs  reload.rs  secret_name.rs  secrets.rs  secrets_prompt.rs  setup_input.rs  setup_to_formspec.rs  tenant_config.rs  webhook.rs
src/admin/: mod.rs  routes.rs  tls.rs
src/cli/: bundle.rs  mod.rs  pack_extract.rs  wizard.rs
src/cli_commands/: doctor.rs  inspect.rs  lifecycle.rs  mod.rs  setup.rs
src/cli_helpers/: bundle.rs  env_vars.rs  mod.rs  prompts.rs
src/engine/: answers.rs  executors.rs  mod.rs  plan_builders.rs  types.rs
src/platform_setup/: mod.rs  persistence.rs  prompts.rs  types.rs  url.rs
src/qa/: bridge.rs  persist.rs  prompts.rs  shared_questions.rs  wizard.rs
src/setup_to_formspec/: convert.rs  inference.rs  mod.rs  pack.rs
src/ui/: assets.rs  assets_v2.rs  auth.rs  bundle_yaml.rs  legacy.rs  locales.rs  mod.rs  routes.rs  server.rs  sse.rs  state.rs
src/ui/api/: bundle.rs  capabilities.rs  error.rs  locale.rs  mod.rs  overview.rs  providers.rs  rebuild.rs  scope_form.rs  secrets.rs  secrets_store.rs  wizard.rs  wizard_engine.rs
src/webhook/: instructions.rs  mod.rs  slack.rs  telegram.rs  webex.rs
tests/: clap_help_check.rs  passphrase_setup.rs  perf_scaling.rs  perf_timeout.rs  ui_api_bundle.rs  ui_api_capabilities.rs  ui_api_error.rs  ui_api_locale.rs  ui_api_overview.rs  ui_api_providers.rs  ui_api_rebuild.rs  ui_api_scope_form.rs  ui_api_secrets.rs  ui_api_wizard.rs  ui_auth.rs  ui_headers.rs  ui_integration.rs  ui_routes.rs  ui_security.rs  ui_state.rs
tools/: i18n.sh
